lenglangrammarParser.java
// Generated from C:/Users/harry/IdeaProjects/lenglang/src\lenglangrammar.g4 by ANTLR 4.9.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class lenglangrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, INT=13, CHAR=14, BOOL=15, PLUS=16, MINUS=17, 
		DIV=18, MULT=19, RBRACK=20, LBRACK=21, EQUALS=22, PERIOD=23, RCAR=24, 
		IF=25, NOT=26, AND=27, OR=28, XOR=29, ASSERT=30, WHILE=31, QUOTATIONS=32, 
		LOGICALSTART=33, SOL=34, EOL=35, SOP=36, EOP=37;
	public static final int
		RULE_operator = 0, RULE_decimal = 1, RULE_number = 2, RULE_operatorChain = 3, 
		RULE_equationSide = 4, RULE_equation = 5, RULE_container = 6, RULE_mathstatement = 7, 
		RULE_logicstatements = 8, RULE_stringchars = 9, RULE_variable = 10, RULE_string = 11, 
		RULE_type = 12, RULE_typenames = 13, RULE_assignment = 14, RULE_codechunk = 15, 
		RULE_logic = 16, RULE_statement = 17, RULE_seqentialstatement = 18, RULE_print = 19, 
		RULE_iterator = 20, RULE_script = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"operator", "decimal", "number", "operatorChain", "equationSide", "equation", 
			"container", "mathstatement", "logicstatements", "stringchars", "variable", 
			"string", "type", "typenames", "assignment", "codechunk", "logic", "statement", 
			"seqentialstatement", "print", "iterator", "script"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'var'", "' '", "'INT'", "'CHAR'", "'STRING'", "'DECIMAL'", "'{'", 
			"';}'", "':'", "'--'", "'PRINT'", "'ITERATE'", null, null, null, "'+'", 
			"'-'", null, null, "')'", "'('", "'='", "'.'", null, "'IF'", null, null, 
			null, null, "'=='", "'WHILE'", null, "'LOGIC('", "'#'", null, null, "'/3'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "INT", "CHAR", "BOOL", "PLUS", "MINUS", "DIV", "MULT", "RBRACK", 
			"LBRACK", "EQUALS", "PERIOD", "RCAR", "IF", "NOT", "AND", "OR", "XOR", 
			"ASSERT", "WHILE", "QUOTATIONS", "LOGICALSTART", "SOL", "EOL", "SOP", 
			"EOP"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "lenglangrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public lenglangrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class OperatorContext extends ParserRuleContext {
		public TerminalNode PLUS() { return getToken(lenglangrammarParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(lenglangrammarParser.MINUS, 0); }
		public TerminalNode MULT() { return getToken(lenglangrammarParser.MULT, 0); }
		public TerminalNode DIV() { return getToken(lenglangrammarParser.DIV, 0); }
		public OperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lenglangrammarListener ) ((lenglangrammarListener)listener).enterOperator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lenglangrammarListener ) ((lenglangrammarListener)listener).exitOperator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof lenglangrammarVisitor ) return ((lenglangrammarVisitor<? extends T>)visitor).visitOperator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperatorContext operator() throws RecognitionException {
		OperatorContext _localctx = new OperatorContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_operator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PLUS) | (1L << MINUS) | (1L << DIV) | (1L << MULT))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DecimalContext extends ParserRuleContext {
		public List<TerminalNode> INT() { return getTokens(lenglangrammarParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(lenglangrammarParser.INT, i);
		}
		public TerminalNode PERIOD() { return getToken(lenglangrammarParser.PERIOD, 0); }
		public DecimalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decimal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lenglangrammarListener ) ((lenglangrammarListener)listener).enterDecimal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lenglangrammarListener ) ((lenglangrammarListener)listener).exitDecimal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof lenglangrammarVisitor ) return ((lenglangrammarVisitor<? extends T>)visitor).visitDecimal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DecimalContext decimal() throws RecognitionException {
		DecimalContext _localctx = new DecimalContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_decimal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			match(INT);
			setState(47);
			match(PERIOD);
			setState(48);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumberContext extends ParserRuleContext {
		public DecimalContext decimal() {
			return getRuleContext(DecimalContext.class,0);
		}
		public TerminalNode INT() { return getToken(lenglangrammarParser.INT, 0); }
		public TerminalNode CHAR() { return getToken(lenglangrammarParser.CHAR, 0); }
		public NumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_number; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lenglangrammarListener ) ((lenglangrammarListener)listener).enterNumber(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lenglangrammarListener ) ((lenglangrammarListener)listener).exitNumber(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof lenglangrammarVisitor ) return ((lenglangrammarVisitor<? extends T>)visitor).visitNumber(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NumberContext number() throws RecognitionException {
		NumberContext _localctx = new NumberContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_number);
		try {
			setState(53);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(50);
				decimal();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(51);
				match(INT);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(52);
				match(CHAR);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperatorChainContext extends ParserRuleContext {
		public List<NumberContext> number() {
			return getRuleContexts(NumberContext.class);
		}
		public NumberContext number(int i) {
			return getRuleContext(NumberContext.class,i);
		}
		public List<ContainerContext> container() {
			return getRuleContexts(ContainerContext.class);
		}
		public ContainerContext container(int i) {
			return getRuleContext(ContainerContext.class,i);
		}
		public List<VariableContext> variable() {
			return getRuleContexts(VariableContext.class);
		}
		public VariableContext variable(int i) {
			return getRuleContext(VariableContext.class,i);
		}
		public List<OperatorContext> operator() {
			return getRuleContexts(OperatorContext.class);
		}
		public OperatorContext operator(int i) {
			return getRuleContext(OperatorContext.class,i);
		}
		public OperatorChainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operatorChain; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lenglangrammarListener ) ((lenglangrammarListener)listener).enterOperatorChain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lenglangrammarListener ) ((lenglangrammarListener)listener).exitOperatorChain(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof lenglangrammarVisitor ) return ((lenglangrammarVisitor<? extends T>)visitor).visitOperatorChain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperatorChainContext operatorChain() throws RecognitionException {
		OperatorChainContext _localctx = new OperatorChainContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_operatorChain);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
			case CHAR:
				{
				setState(55);
				number();
				}
				break;
			case LBRACK:
				{
				setState(56);
				container();
				}
				break;
			case T__0:
				{
				setState(57);
				variable();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(66); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(60);
				operator();
				setState(64);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__0:
					{
					setState(61);
					variable();
					}
					break;
				case INT:
				case CHAR:
					{
					setState(62);
					number();
					}
					break;
				case LBRACK:
					{
					setState(63);
					container();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				setState(68); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PLUS) | (1L << MINUS) | (1L << DIV) | (1L << MULT))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EquationSideContext extends ParserRuleContext {
		public OperatorChainContext operatorChain() {
			return getRuleContext(OperatorChainContext.class,0);
		}
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public ContainerContext container() {
			return getRuleContext(ContainerContext.class,0);
		}
		public EquationSideContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_equationSide; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lenglangrammarListener ) ((lenglangrammarListener)listener).enterEquationSide(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lenglangrammarListener ) ((lenglangrammarListener)listener).exitEquationSide(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof lenglangrammarVisitor ) return ((lenglangrammarVisitor<? extends T>)visitor).visitEquationSide(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EquationSideContext equationSide() throws RecognitionException {
		EquationSideContext _localctx = new EquationSideContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_equationSide);
		try {
			setState(73);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(70);
				operatorChain();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(71);
				number();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(72);
				container();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EquationContext extends ParserRuleContext {
		public List<EquationSideContext> equationSide() {
			return getRuleContexts(EquationSideContext.class);
		}
		public EquationSideContext equationSide(int i) {
			return getRuleContext(EquationSideContext.class,i);
		}
		public List<TerminalNode> EQUALS() { return getTokens(lenglangrammarParser.EQUALS); }
		public TerminalNode EQUALS(int i) {
			return getToken(lenglangrammarParser.EQUALS, i);
		}
		public EquationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_equation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lenglangrammarListener ) ((lenglangrammarListener)listener).enterEquation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lenglangrammarListener ) ((lenglangrammarListener)listener).exitEquation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof lenglangrammarVisitor ) return ((lenglangrammarVisitor<? extends T>)visitor).visitEquation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EquationContext equation() throws RecognitionException {
		EquationContext _localctx = new EquationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_equation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			equationSide();
			setState(78); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(76);
				match(EQUALS);
				setState(77);
				equationSide();
				}
				}
				setState(80); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==EQUALS );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ContainerContext extends ParserRuleContext {
		public TerminalNode LBRACK() { return getToken(lenglangrammarParser.LBRACK, 0); }
		public MathstatementContext mathstatement() {
			return getRuleContext(MathstatementContext.class,0);
		}
		public TerminalNode RBRACK() { return getToken(lenglangrammarParser.RBRACK, 0); }
		public ContainerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_container; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lenglangrammarListener ) ((lenglangrammarListener)listener).enterContainer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lenglangrammarListener ) ((lenglangrammarListener)listener).exitContainer(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof lenglangrammarVisitor ) return ((lenglangrammarVisitor<? extends T>)visitor).visitContainer(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ContainerContext container() throws RecognitionException {
		ContainerContext _localctx = new ContainerContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_container);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(LBRACK);
			setState(83);
			mathstatement();
			setState(84);
			match(RBRACK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MathstatementContext extends ParserRuleContext {
		public EquationSideContext equationSide() {
			return getRuleContext(EquationSideContext.class,0);
		}
		public ContainerContext container() {
			return getRuleContext(ContainerContext.class,0);
		}
		public OperatorChainContext operatorChain() {
			return getRuleContext(OperatorChainContext.class,0);
		}
		public MathstatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mathstatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lenglangrammarListener ) ((lenglangrammarListener)listener).enterMathstatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lenglangrammarListener ) ((lenglangrammarListener)listener).exitMathstatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof lenglangrammarVisitor ) return ((lenglangrammarVisitor<? extends T>)visitor).visitMathstatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MathstatementContext mathstatement() throws RecognitionException {
		MathstatementContext _localctx = new MathstatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_mathstatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(86);
				equationSide();
				}
				break;
			case 2:
				{
				setState(87);
				container();
				}
				break;
			case 3:
				{
				setState(88);
				operatorChain();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LogicstatementsContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(lenglangrammarParser.IF, 0); }
		public TerminalNode NOT() { return getToken(lenglangrammarParser.NOT, 0); }
		public TerminalNode AND() { return getToken(lenglangrammarParser.AND, 0); }
		public TerminalNode OR() { return getToken(lenglangrammarParser.OR, 0); }
		public TerminalNode XOR() { return getToken(lenglangrammarParser.XOR, 0); }
		public TerminalNode ASSERT() { return getToken(lenglangrammarParser.ASSERT, 0); }
		public LogicstatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicstatements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lenglangrammarListener ) ((lenglangrammarListener)listener).enterLogicstatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lenglangrammarListener ) ((lenglangrammarListener)listener).exitLogicstatements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof lenglangrammarVisitor ) return ((lenglangrammarVisitor<? extends T>)visitor).visitLogicstatements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LogicstatementsContext logicstatements() throws RecognitionException {
		LogicstatementsContext _localctx = new LogicstatementsContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_logicstatements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << NOT) | (1L << AND) | (1L << OR) | (1L << XOR) | (1L << ASSERT))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringcharsContext extends ParserRuleContext {
		public List<TerminalNode> CHAR() { return getTokens(lenglangrammarParser.CHAR); }
		public TerminalNode CHAR(int i) {
			return getToken(lenglangrammarParser.CHAR, i);
		}
		public StringcharsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stringchars; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lenglangrammarListener ) ((lenglangrammarListener)listener).enterStringchars(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lenglangrammarListener ) ((lenglangrammarListener)listener).exitStringchars(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof lenglangrammarVisitor ) return ((lenglangrammarVisitor<? extends T>)visitor).visitStringchars(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StringcharsContext stringchars() throws RecognitionException {
		StringcharsContext _localctx = new StringcharsContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_stringchars);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(94); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(93);
					match(CHAR);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(96); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableContext extends ParserRuleContext {
		public StringcharsContext stringchars() {
			return getRuleContext(StringcharsContext.class,0);
		}
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lenglangrammarListener ) ((lenglangrammarListener)listener).enterVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lenglangrammarListener ) ((lenglangrammarListener)listener).exitVariable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof lenglangrammarVisitor ) return ((lenglangrammarVisitor<? extends T>)visitor).visitVariable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_variable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(T__0);
			setState(99);
			stringchars();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringContext extends ParserRuleContext {
		public List<TerminalNode> QUOTATIONS() { return getTokens(lenglangrammarParser.QUOTATIONS); }
		public TerminalNode QUOTATIONS(int i) {
			return getToken(lenglangrammarParser.QUOTATIONS, i);
		}
		public List<StringcharsContext> stringchars() {
			return getRuleContexts(StringcharsContext.class);
		}
		public StringcharsContext stringchars(int i) {
			return getRuleContext(StringcharsContext.class,i);
		}
		public StringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lenglangrammarListener ) ((lenglangrammarListener)listener).enterString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lenglangrammarListener ) ((lenglangrammarListener)listener).exitString(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof lenglangrammarVisitor ) return ((lenglangrammarVisitor<? extends T>)visitor).visitString(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StringContext string() throws RecognitionException {
		StringContext _localctx = new StringContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_string);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(QUOTATIONS);
			setState(104); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(104);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case CHAR:
					{
					setState(102);
					stringchars();
					}
					break;
				case T__1:
					{
					setState(103);
					match(T__1);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(106); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__1 || _la==CHAR );
			setState(108);
			match(QUOTATIONS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(lenglangrammarParser.INT, 0); }
		public TerminalNode CHAR() { return getToken(lenglangrammarParser.CHAR, 0); }
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public DecimalContext decimal() {
			return getRuleContext(DecimalContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lenglangrammarListener ) ((lenglangrammarListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lenglangrammarListener ) ((lenglangrammarListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof lenglangrammarVisitor ) return ((lenglangrammarVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_type);
		try {
			setState(114);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(110);
				match(INT);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(111);
				match(CHAR);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(112);
				string();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(113);
				decimal();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypenamesContext extends ParserRuleContext {
		public TypenamesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typenames; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lenglangrammarListener ) ((lenglangrammarListener)listener).enterTypenames(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lenglangrammarListener ) ((lenglangrammarListener)listener).exitTypenames(this);
		}
